--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
     <!-- google map api -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuf1btxRNqcI8jsZIG242ZR2fp7NY7Itk">
     </script>
